videos page css, still needs work, added more validators and prevent text description overflowing from videos divs

--- a/react-app/src/components/Videos/Videos.css
+++ b/react-app/src/components/Videos/Videos.css
@@ -1,6 +1,6 @@
-.videoContainer{
+.videoContainer {
     display: flex;
-    padding-left: 20%;
+    padding-left: 10%;
     padding-top: 1%;
 }
 
@@ -11,41 +11,109 @@
 }  */
 
 
-.oneVideo{
+.oneVideo {
     border-radius: 10%;
 }
 
-.allVideos{
+.allVideos {
     padding-top: 5%;
     padding-bottom: 5%;
 }
 
-.allVideosHeader{
+.allVideosHeader {
     align-content: center;
     padding-top: 5%;
 }
 
 
-.videoDescription{
-    padding-left: 20%;
+.videoDescription {
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100px;
+    font-size: 20px;
+    width: 550px;
+    height: 300px;
+    word-wrap: break-word;
 }
 
-.allVidsContainer{
-    padding-bottom: 6%;
-}
 
-.vidLink{
+
+.vidLink {
     color: black;
     text-decoration: none;
     padding-left: 20%;
 }
 
-.allVideosHeader{
+.allVideosHeader {
     padding-left: 40%;
     padding-top: 10%;
 }
 
-.contentCreator{
-    padding-left: 20%;
+.contentCreator {
+    font-weight: bolder;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
 }
+
+
+.dateCreated {
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+}
+
+
+.videoTitle {
+    text-decoration: none;
+    color: black;
+}
+
+
+
+.videoDetails {
+    padding-left: 2%;
+    margin-left: 10%
+}
+
+.createdInfo {
+    padding-left: 10%;
+    font-size: 15px;
+}
+
+
+.allVidsContainer {
+    display: flex;
+    flex-direction: row;
+    width: 1100px;
+    height: 720px;
+
+    background:
+        /* linear-gradient(to right, black 4px, transparent 4px) 0 0, */
+        linear-gradient(to right, black 4px, transparent 4px) 0 100%,
+        linear-gradient(to left, black 4px, transparent 4px) 100% 0,
+        /* linear-gradient(to left, black 4px, transparent 4px) 100% 100%, */
+
+        /* linear-gradient(to bottom, black 4px, transparent 4px) 0 0, */
+        linear-gradient(to bottom, black 4px, transparent 4px) 100% 0,
+        linear-gradient(to top, black 4px, transparent 4px) 0 100%,
+        linear-gradient(to top, black 4px, transparent 4px) 0% 100%;
+    ;
+    ;
+
+    background-repeat: no-repeat;
+    background-size: 450px 200px;
+    margin-bottom: 10%;
+    margin-left: 15%;
+}
+
+
+.videoTitle {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 100px;
+}
+
+
+
+
+/* EXAMPLE */
